# NESO-Tokamak

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-linux-ubuntu24.04-skylake-rgmqnlq  build-linux-ubuntu24.04-skylake-x5cf4wn  build-linux-ubuntu24.04-skylake-zxio52p  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: gh-pages.yaml
_sources/static_rst/: reactions_minimal_coupling.rst.txt
_static/: custom.css
cmake/: FindNESO.cmake
data/: Normalisation_constants.csv
docs/: braginskii  build_branch_docs.sh  generate_versions_json.py  redirect_index.html
docs/doxygen/: Doxyfile  Makefile
docs/source/: conf.py  index.rst
docs/source/static_rst/: electrostatic_turbulence.rst
docs/sphinx/: Makefile  requirements.txt
docs/sphinx/source/: conf.py
etc/: README.md  square.geo  square.msh  square.xml
etc/MASTU/: B-mm.pts  Face001_Geometry.brep  Revolution_Geometry.brep  firedrake_B.csv  firedrake_B_m.csv  firedrake_mesh_v2.csv
examples/MASTU-2D/: B.pts  ambipol.xml  mastu.xml  mastu_cd.geo  mastu_cd.msh  mastu_cd.xml  run_cmd_template.txt  tokamak.xml
examples/MASTU-2D-Outer/: B.fld  mastu2D.xml  run_cmd_template.txt  shape2mesh.geo  shape2mesh.msh  tokamak.xml
examples/MASTU-3D/: run_cmd_template.txt  scaled_reactor.geo  scaled_reactor.msh  scaled_reactor.py  scaled_reactor.xml
examples/MASTU-Filled/: filledin.geo  filledin.xml  fort 1.34
examples/MASTU-Hole/: dryrun.geo
examples/MASTU/2D/: Face001_Mesh.unv  double_field.xml  mastu.xml  mastu_cd.msh  run_cmd_template.txt  single_field.xml  tokamak.xml
examples/MASTU/2D-FA/: run_cmd_template.txt  tokamak.xml
examples/MASTU/3D/: B.pts  MASTU3D.mcf  MASTU3D.stp  mastu3d.geo  run_cmd_template.txt  scaled_reactor.msh  tokamak.xml  (+3 more)
examples/explicit-noparticles/: hw.xml
examples/implicit/: hw.xml
examples/implicit-noparticles/: hw.xml
examples/implicit2D/: hw.xml  run_cmd_template.txt
examples/slab/: cuboid.fld  cuboid.opt  cuboid.xml  run_cmd_template.txt  slab.vtu  slab.xml
examples/slab-2D/: slab.xml
postproc/: particle_velhist.py
postproc/common/: __init__.py  locations.py
scripts/: run_eg-completion.sh  run_eg.sh
spack/: neso-external-spack.yaml  spack-external.yaml  spack-internal.yaml  spack.yaml
spack/repo/: repo.yaml
src/: main.cpp
src/BoundaryConditions/: BohmBC.cpp  BohmBC.hpp  ObliqueBC.cpp  ObliqueBC.h  ObliqueBC.hpp  ObliqueOutflowBC.cpp  ObliqueOutflowBC.hpp  ReducedSheathBC.cpp  ReducedSheathBC.hpp  SheathBC.cpp  SheathBC.h  SheathBC.hpp  TokamakBaseBndCond.cpp  TokamakBaseBndCond.hpp  TokamakBndCond.cpp  TokamakBndCond.h  TokamakBndCond.hpp  TokamakBndConds.cpp  TokamakBndConds.hpp  WallBC.cpp  WallBC.hpp
src/Diagnostics/: GrowthRatesRecorder.hpp
src/EquationSystems/: AnomalousDiffusion.cpp  AnomalousDiffusion.hpp  DoubleDiffusiveField.cpp  DoubleDiffusiveField.hpp  ElectrostaticTurbulence.cpp  ElectrostaticTurbulence.hpp  HWITSystem.cpp  HWITSystem.hpp  ImplicitHelper.hpp  MagneticField.cpp  MagneticField.hpp  ReducedBraginskii.cpp  ReducedBraginskii.hpp  SingleDiffusiveField.cpp  SingleDiffusiveField.hpp  TokamakSystem.cpp  TokamakSystem.hpp
src/Forcing/: ReactionsCoupling.cpp  ReactionsCoupling.hpp
src/Misc/: Constants.hpp  EquationOfState.cpp  EquationOfState.hpp  IdealGasEoS.cpp  IdealGasEoS.hpp  VariableConverter.cpp  VariableConverter.hpp
src/ParticleSystems/: AMJUEL.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ReactionSystem.cpp  ReactionSystem.hpp
src/RiemannSolvers/: MultiFieldAverage.cpp  MultiFieldAverage.hpp  MultiFieldUpwind.cpp  MultiFieldUpwind.hpp  TokamakSolver.cpp  TokamakSolver.hpp  Upwind.cpp  VorticityAverage.cpp  VorticityAverage.hpp  VorticityUpwind.cpp  VorticityUpwind.hpp
static_rst/: reactions_minimal_coupling.html
(+75 files in other folders)
